; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_xan.c_xan_decode_frame.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_xan.c_xan_decode_frame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_24__ = type { i32, %struct.TYPE_20__* }
%struct.TYPE_20__ = type { i32, i32*, i32, i32, i32, i32, i32, %struct.TYPE_24__* }
%struct.TYPE_22__ = type { i32, i32* }
%struct.TYPE_23__ = type { i32*, i32* }
%struct.TYPE_21__ = type { i32 }

@AV_LOG_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"Invalid tag size %d\0A\00", align 1
@AVERROR_INVALIDDATA = common dso_local global i32 0, align 4
@PALETTE_SIZE = common dso_local global i32 0, align 4
@PALETTES_MAX = common dso_local global i32 0, align 4
@AVPALETTE_SIZE = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@AVPALETTE_COUNT = common dso_local global i32 0, align 4
@PALETTE_COUNT = common dso_local global i32 0, align 4
@gamma_lookup = common dso_local global i32* null, align 8
@.str.1 = private unnamed_addr constant [26 x i8] c"Invalid palette selected\0A\00", align 1
@.str.2 = private unnamed_addr constant [18 x i8] c"No palette found\0A\00", align 1
@AV_GET_BUFFER_FLAG_REF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_24__*, i8*, i32*, %struct.TYPE_22__*)* @xan_decode_frame to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xan_decode_frame(%struct.TYPE_24__* %0, i8* %1, i32* %2, %struct.TYPE_22__* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_24__*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_22__*, align 8
  %10 = alloca %struct.TYPE_23__*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca %struct.TYPE_20__*, align 8
  %15 = alloca %struct.TYPE_21__, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32*, align 8
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  store %struct.TYPE_24__* %0, %struct.TYPE_24__** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32* %2, i32** %8, align 8
  store %struct.TYPE_22__* %3, %struct.TYPE_22__** %9, align 8
  %24 = load i8*, i8** %7, align 8
  %25 = bitcast i8* %24 to %struct.TYPE_23__*
  store %struct.TYPE_23__* %25, %struct.TYPE_23__** %10, align 8
  %26 = load %struct.TYPE_22__*, %struct.TYPE_22__** %9, align 8
  %27 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %26, i32 0, i32 1
  %28 = load i32*, i32** %27, align 8
  store i32* %28, i32** %11, align 8
  %29 = load %struct.TYPE_22__*, %struct.TYPE_22__** %9, align 8
  %30 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 8
  store i32 %31, i32* %13, align 4
  %32 = load %struct.TYPE_24__*, %struct.TYPE_24__** %6, align 8
  %33 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %32, i32 0, i32 1
  %34 = load %struct.TYPE_20__*, %struct.TYPE_20__** %33, align 8
  store %struct.TYPE_20__* %34, %struct.TYPE_20__** %14, align 8
  store i32 0, i32* %16, align 4
  %35 = load i32*, i32** %11, align 8
  %36 = load i32, i32* %13, align 4
  %37 = call i32 @bytestream2_init(%struct.TYPE_21__* %15, i32* %35, i32 %36)
  br label %38

38:                                               ; preds = %165, %4
  %39 = call i32 @bytestream2_get_bytes_left(%struct.TYPE_21__* %15)
  %40 = icmp sgt i32 %39, 8
  br i1 %40, label %41, label %44

41:                                               ; preds = %38
  %42 = load i32, i32* %16, align 4
  %43 = icmp ne i32 %42, 128
  br label %44

44:                                               ; preds = %41, %38
  %45 = phi i1 [ false, %38 ], [ %43, %41 ]
  br i1 %45, label %46, label %166

46:                                               ; preds = %44
  %47 = call i8* @bytestream2_get_le32(%struct.TYPE_21__* %15)
  %48 = ptrtoint i8* %47 to i32
  store i32 %48, i32* %16, align 4
  %49 = call i32 @bytestream2_get_be32(%struct.TYPE_21__* %15)
  store i32 %49, i32* %19, align 4
  %50 = load i32, i32* %19, align 4
  %51 = icmp slt i32 %50, 0
  br i1 %51, label %52, label %58

52:                                               ; preds = %46
  %53 = load %struct.TYPE_24__*, %struct.TYPE_24__** %6, align 8
  %54 = load i32, i32* @AV_LOG_ERROR, align 4
  %55 = load i32, i32* %19, align 4
  %56 = call i32 (%struct.TYPE_24__*, i32, i8*, ...) @av_log(%struct.TYPE_24__* %53, i32 %54, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i32 %55)
  %57 = load i32, i32* @AVERROR_INVALIDDATA, align 4
  store i32 %57, i32* %5, align 4
  br label %253

58:                                               ; preds = %46
  %59 = load i32, i32* %19, align 4
  %60 = call i32 @bytestream2_get_bytes_left(%struct.TYPE_21__* %15)
  %61 = call i32 @FFMIN(i32 %59, i32 %60)
  store i32 %61, i32* %19, align 4
  %62 = load i32, i32* %16, align 4
  switch i32 %62, label %162 [
    i32 130, label %63
    i32 129, label %139
    i32 128, label %161
  ]

63:                                               ; preds = %58
  %64 = load i32, i32* %19, align 4
  %65 = load i32, i32* @PALETTE_SIZE, align 4
  %66 = icmp slt i32 %64, %65
  br i1 %66, label %67, label %69

67:                                               ; preds = %63
  %68 = load i32, i32* @AVERROR_INVALIDDATA, align 4
  store i32 %68, i32* %5, align 4
  br label %253

69:                                               ; preds = %63
  %70 = load %struct.TYPE_20__*, %struct.TYPE_20__** %14, align 8
  %71 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %70, i32 0, i32 0
  %72 = load i32, i32* %71, align 8
  %73 = load i32, i32* @PALETTES_MAX, align 4
  %74 = icmp sge i32 %72, %73
  br i1 %74, label %75, label %77

75:                                               ; preds = %69
  %76 = load i32, i32* @AVERROR_INVALIDDATA, align 4
  store i32 %76, i32* %5, align 4
  br label %253

77:                                               ; preds = %69
  %78 = load %struct.TYPE_20__*, %struct.TYPE_20__** %14, align 8
  %79 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %78, i32 0, i32 1
  %80 = load i32*, i32** %79, align 8
  %81 = load %struct.TYPE_20__*, %struct.TYPE_20__** %14, align 8
  %82 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %81, i32 0, i32 0
  %83 = load i32, i32* %82, align 8
  %84 = add nsw i32 %83, 1
  %85 = load i32, i32* @AVPALETTE_SIZE, align 4
  %86 = call i32* @av_realloc_array(i32* %80, i32 %84, i32 %85)
  store i32* %86, i32** %17, align 8
  %87 = load i32*, i32** %17, align 8
  %88 = icmp ne i32* %87, null
  br i1 %88, label %92, label %89

89:                                               ; preds = %77
  %90 = load i32, i32* @ENOMEM, align 4
  %91 = call i32 @AVERROR(i32 %90)
  store i32 %91, i32* %5, align 4
  br label %253

92:                                               ; preds = %77
  %93 = load i32*, i32** %17, align 8
  %94 = load %struct.TYPE_20__*, %struct.TYPE_20__** %14, align 8
  %95 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %94, i32 0, i32 1
  store i32* %93, i32** %95, align 8
  %96 = load %struct.TYPE_20__*, %struct.TYPE_20__** %14, align 8
  %97 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %96, i32 0, i32 0
  %98 = load i32, i32* %97, align 8
  %99 = load i32, i32* @AVPALETTE_COUNT, align 4
  %100 = mul nsw i32 %98, %99
  %101 = load i32*, i32** %17, align 8
  %102 = sext i32 %100 to i64
  %103 = getelementptr inbounds i32, i32* %101, i64 %102
  store i32* %103, i32** %17, align 8
  store i32 0, i32* %20, align 4
  br label %104

104:                                              ; preds = %131, %92
  %105 = load i32, i32* %20, align 4
  %106 = load i32, i32* @PALETTE_COUNT, align 4
  %107 = icmp slt i32 %105, %106
  br i1 %107, label %108, label %134

108:                                              ; preds = %104
  %109 = load i32*, i32** @gamma_lookup, align 8
  %110 = call i64 @bytestream2_get_byteu(%struct.TYPE_21__* %15)
  %111 = getelementptr inbounds i32, i32* %109, i64 %110
  %112 = load i32, i32* %111, align 4
  store i32 %112, i32* %21, align 4
  %113 = load i32*, i32** @gamma_lookup, align 8
  %114 = call i64 @bytestream2_get_byteu(%struct.TYPE_21__* %15)
  %115 = getelementptr inbounds i32, i32* %113, i64 %114
  %116 = load i32, i32* %115, align 4
  store i32 %116, i32* %22, align 4
  %117 = load i32*, i32** @gamma_lookup, align 8
  %118 = call i64 @bytestream2_get_byteu(%struct.TYPE_21__* %15)
  %119 = getelementptr inbounds i32, i32* %117, i64 %118
  %120 = load i32, i32* %119, align 4
  store i32 %120, i32* %23, align 4
  %121 = load i32, i32* %21, align 4
  %122 = shl i32 %121, 16
  %123 = or i32 -16777216, %122
  %124 = load i32, i32* %22, align 4
  %125 = shl i32 %124, 8
  %126 = or i32 %123, %125
  %127 = load i32, i32* %23, align 4
  %128 = or i32 %126, %127
  %129 = load i32*, i32** %17, align 8
  %130 = getelementptr inbounds i32, i32* %129, i32 1
  store i32* %130, i32** %17, align 8
  store i32 %128, i32* %129, align 4
  br label %131

131:                                              ; preds = %108
  %132 = load i32, i32* %20, align 4
  %133 = add nsw i32 %132, 1
  store i32 %133, i32* %20, align 4
  br label %104

134:                                              ; preds = %104
  %135 = load %struct.TYPE_20__*, %struct.TYPE_20__** %14, align 8
  %136 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %135, i32 0, i32 0
  %137 = load i32, i32* %136, align 8
  %138 = add nsw i32 %137, 1
  store i32 %138, i32* %136, align 8
  br label %165

139:                                              ; preds = %58
  %140 = load i32, i32* %19, align 4
  %141 = icmp slt i32 %140, 4
  br i1 %141, label %142, label %144

142:                                              ; preds = %139
  %143 = load i32, i32* @AVERROR_INVALIDDATA, align 4
  store i32 %143, i32* %5, align 4
  br label %253

144:                                              ; preds = %139
  %145 = call i8* @bytestream2_get_le32(%struct.TYPE_21__* %15)
  %146 = ptrtoint i8* %145 to i32
  store i32 %146, i32* %18, align 4
  %147 = load i32, i32* %18, align 4
  %148 = load %struct.TYPE_20__*, %struct.TYPE_20__** %14, align 8
  %149 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %148, i32 0, i32 0
  %150 = load i32, i32* %149, align 8
  %151 = icmp slt i32 %147, %150
  br i1 %151, label %152, label %156

152:                                              ; preds = %144
  %153 = load i32, i32* %18, align 4
  %154 = load %struct.TYPE_20__*, %struct.TYPE_20__** %14, align 8
  %155 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %154, i32 0, i32 2
  store i32 %153, i32* %155, align 8
  br label %160

156:                                              ; preds = %144
  %157 = load %struct.TYPE_24__*, %struct.TYPE_24__** %6, align 8
  %158 = load i32, i32* @AV_LOG_ERROR, align 4
  %159 = call i32 (%struct.TYPE_24__*, i32, i8*, ...) @av_log(%struct.TYPE_24__* %157, i32 %158, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.1, i64 0, i64 0))
  br label %160

160:                                              ; preds = %156, %152
  br label %165

161:                                              ; preds = %58
  br label %165

162:                                              ; preds = %58
  %163 = load i32, i32* %19, align 4
  %164 = call i32 @bytestream2_skip(%struct.TYPE_21__* %15, i32 %163)
  br label %165

165:                                              ; preds = %162, %161, %160, %134
  br label %38

166:                                              ; preds = %44
  %167 = call i32 @bytestream2_get_bytes_left(%struct.TYPE_21__* %15)
  store i32 %167, i32* %13, align 4
  %168 = load %struct.TYPE_20__*, %struct.TYPE_20__** %14, align 8
  %169 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %168, i32 0, i32 0
  %170 = load i32, i32* %169, align 8
  %171 = icmp sle i32 %170, 0
  br i1 %171, label %172, label %179

172:                                              ; preds = %166
  %173 = load %struct.TYPE_20__*, %struct.TYPE_20__** %14, align 8
  %174 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %173, i32 0, i32 7
  %175 = load %struct.TYPE_24__*, %struct.TYPE_24__** %174, align 8
  %176 = load i32, i32* @AV_LOG_ERROR, align 4
  %177 = call i32 (%struct.TYPE_24__*, i32, i8*, ...) @av_log(%struct.TYPE_24__* %175, i32 %176, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0))
  %178 = load i32, i32* @AVERROR_INVALIDDATA, align 4
  store i32 %178, i32* %5, align 4
  br label %253

179:                                              ; preds = %166
  %180 = load %struct.TYPE_24__*, %struct.TYPE_24__** %6, align 8
  %181 = load %struct.TYPE_23__*, %struct.TYPE_23__** %10, align 8
  %182 = load i32, i32* @AV_GET_BUFFER_FLAG_REF, align 4
  %183 = call i32 @ff_get_buffer(%struct.TYPE_24__* %180, %struct.TYPE_23__* %181, i32 %182)
  store i32 %183, i32* %12, align 4
  %184 = icmp slt i32 %183, 0
  br i1 %184, label %185, label %187

185:                                              ; preds = %179
  %186 = load i32, i32* %12, align 4
  store i32 %186, i32* %5, align 4
  br label %253

187:                                              ; preds = %179
  %188 = load %struct.TYPE_20__*, %struct.TYPE_20__** %14, align 8
  %189 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %188, i32 0, i32 3
  %190 = load i32, i32* %189, align 4
  %191 = icmp ne i32 %190, 0
  br i1 %191, label %206, label %192

192:                                              ; preds = %187
  %193 = load %struct.TYPE_23__*, %struct.TYPE_23__** %10, align 8
  %194 = getelementptr inbounds %struct.TYPE_23__, %struct.TYPE_23__* %193, i32 0, i32 0
  %195 = load i32*, i32** %194, align 8
  %196 = getelementptr inbounds i32, i32* %195, i64 0
  %197 = load i32, i32* %196, align 4
  %198 = load %struct.TYPE_20__*, %struct.TYPE_20__** %14, align 8
  %199 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %198, i32 0, i32 7
  %200 = load %struct.TYPE_24__*, %struct.TYPE_24__** %199, align 8
  %201 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %200, i32 0, i32 0
  %202 = load i32, i32* %201, align 8
  %203 = mul nsw i32 %197, %202
  %204 = load %struct.TYPE_20__*, %struct.TYPE_20__** %14, align 8
  %205 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %204, i32 0, i32 3
  store i32 %203, i32* %205, align 4
  br label %206

206:                                              ; preds = %192, %187
  %207 = load %struct.TYPE_23__*, %struct.TYPE_23__** %10, align 8
  %208 = getelementptr inbounds %struct.TYPE_23__, %struct.TYPE_23__* %207, i32 0, i32 1
  %209 = load i32*, i32** %208, align 8
  %210 = getelementptr inbounds i32, i32* %209, i64 1
  %211 = load i32, i32* %210, align 4
  %212 = load %struct.TYPE_20__*, %struct.TYPE_20__** %14, align 8
  %213 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %212, i32 0, i32 1
  %214 = load i32*, i32** %213, align 8
  %215 = load %struct.TYPE_20__*, %struct.TYPE_20__** %14, align 8
  %216 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %215, i32 0, i32 2
  %217 = load i32, i32* %216, align 8
  %218 = load i32, i32* @AVPALETTE_COUNT, align 4
  %219 = mul nsw i32 %217, %218
  %220 = sext i32 %219 to i64
  %221 = getelementptr inbounds i32, i32* %214, i64 %220
  %222 = load i32, i32* @AVPALETTE_SIZE, align 4
  %223 = call i32 @memcpy(i32 %211, i32* %221, i32 %222)
  %224 = getelementptr inbounds %struct.TYPE_21__, %struct.TYPE_21__* %15, i32 0, i32 0
  %225 = load i32, i32* %224, align 4
  %226 = load %struct.TYPE_20__*, %struct.TYPE_20__** %14, align 8
  %227 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %226, i32 0, i32 6
  store i32 %225, i32* %227, align 8
  %228 = load i32, i32* %13, align 4
  %229 = load %struct.TYPE_20__*, %struct.TYPE_20__** %14, align 8
  %230 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %229, i32 0, i32 4
  store i32 %228, i32* %230, align 8
  %231 = load %struct.TYPE_20__*, %struct.TYPE_20__** %14, align 8
  %232 = load %struct.TYPE_23__*, %struct.TYPE_23__** %10, align 8
  %233 = call i64 @xan_wc3_decode_frame(%struct.TYPE_20__* %231, %struct.TYPE_23__* %232)
  %234 = icmp slt i64 %233, 0
  br i1 %234, label %235, label %237

235:                                              ; preds = %206
  %236 = load i32, i32* @AVERROR_INVALIDDATA, align 4
  store i32 %236, i32* %5, align 4
  br label %253

237:                                              ; preds = %206
  %238 = load %struct.TYPE_20__*, %struct.TYPE_20__** %14, align 8
  %239 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %238, i32 0, i32 5
  %240 = load i32, i32* %239, align 4
  %241 = call i32 @av_frame_unref(i32 %240)
  %242 = load %struct.TYPE_20__*, %struct.TYPE_20__** %14, align 8
  %243 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %242, i32 0, i32 5
  %244 = load i32, i32* %243, align 4
  %245 = load %struct.TYPE_23__*, %struct.TYPE_23__** %10, align 8
  %246 = call i32 @av_frame_ref(i32 %244, %struct.TYPE_23__* %245)
  store i32 %246, i32* %12, align 4
  %247 = icmp slt i32 %246, 0
  br i1 %247, label %248, label %250

248:                                              ; preds = %237
  %249 = load i32, i32* %12, align 4
  store i32 %249, i32* %5, align 4
  br label %253

250:                                              ; preds = %237
  %251 = load i32*, i32** %8, align 8
  store i32 1, i32* %251, align 4
  %252 = load i32, i32* %13, align 4
  store i32 %252, i32* %5, align 4
  br label %253

253:                                              ; preds = %250, %248, %235, %185, %172, %142, %89, %75, %67, %52
  %254 = load i32, i32* %5, align 4
  ret i32 %254
}

declare dso_local i32 @bytestream2_init(%struct.TYPE_21__*, i32*, i32) #1

declare dso_local i32 @bytestream2_get_bytes_left(%struct.TYPE_21__*) #1

declare dso_local i8* @bytestream2_get_le32(%struct.TYPE_21__*) #1

declare dso_local i32 @bytestream2_get_be32(%struct.TYPE_21__*) #1

declare dso_local i32 @av_log(%struct.TYPE_24__*, i32, i8*, ...) #1

declare dso_local i32 @FFMIN(i32, i32) #1

declare dso_local i32* @av_realloc_array(i32*, i32, i32) #1

declare dso_local i32 @AVERROR(i32) #1

declare dso_local i64 @bytestream2_get_byteu(%struct.TYPE_21__*) #1

declare dso_local i32 @bytestream2_skip(%struct.TYPE_21__*, i32) #1

declare dso_local i32 @ff_get_buffer(%struct.TYPE_24__*, %struct.TYPE_23__*, i32) #1

declare dso_local i32 @memcpy(i32, i32*, i32) #1

declare dso_local i64 @xan_wc3_decode_frame(%struct.TYPE_20__*, %struct.TYPE_23__*) #1

declare dso_local i32 @av_frame_unref(i32) #1

declare dso_local i32 @av_frame_ref(i32, %struct.TYPE_23__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
